--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="left-info">
             <div class="pic-gradient"></div>
             <div class="today-info">
-                <h2>Sabado</h2>
+                <h2>Sábado</h2>
                 <span>17 de agosto de 2023</span>
                 <div>
                     <i class='bx bx-current-location'></i>
@@ -27,7 +27,7 @@
                 </div>
             </div>
             <div class="today-weather">
-                <i class='bx bxs-sun' ></i>
+                <i class='bx bx-sun'></i>
                 <h1 class="weather-temp">
                     10°C
                 </h1>
@@ -84,6 +84,7 @@
 
     </div>
 
+    <script src="scripts/config.js"></script>
     <script src="scripts/index.js"></script>
 </body>
 </html>
