added additional information. finished todays weather information

--- a/index.html
+++ b/index.html
@@ -38,8 +38,12 @@
         <div class="right-info">
             <div class="day-info">
                 <div>
+                    <span class="title">SENSACIÓN TÉRMICA</span>
+                    <span class="value">9°C</span>
+                </div>
+                <div>
                     <span class="title">PRECIPITACIONES</span>
-                    <span class="value">4 %</span>
+                    <span class="value">10 mm</span>
                 </div>
                 <div>
                     <span class="title">HUMEDAD</span>
@@ -47,7 +51,15 @@
                 </div>
                 <div>
                     <span class="title">VIENTOS</span>
+                    <span class="value">N - 100 km/h</span>
+                </div>
+                <div>
+                    <span class="title">ÍNDICE UV</span>
                     <span class="value">100 km/h</span>
+                </div>
+                <div>
+                    <span class="title">VISIBILIDAD</span>
+                    <span class="value">20 km</span>
                 </div>
             </div>
 
