added date for forecast, now application displays the forecast for the next four days correctly

--- a/index.html
+++ b/index.html
@@ -67,21 +67,25 @@
                 <li>
                     <i class='bx bx-cloud' ></i>
                     <span>Dom</span>
+                    <span>18/08</span>
                     <span class="day-temp">20°C</span>
                 </li>
                 <li>
                     <i class='bx bx-cloud-drizzle' ></i>
                     <span>Lun</span>
+                    <span>19/08</span>
                     <span class="day-temp">11°C</span>
                 </li>
                 <li>
                     <i class='bx bx-cloud-lightning' ></i>
                     <span>Mar</span>
+                    <span>20/08</span>
                     <span class="day-temp">8°C</span>
                 </li>
                 <li>
                     <i class='bx bx-cloud-rain' ></i>
                     <span>Mie</span>
+                    <span>21/08</span>
                     <span class="day-temp">1°C</span>
                 </li>
             </ul>
